Accessible bounds should include device scale factor on Windows.

When reporting the bounding box of an object from the web
via an accessibility API on Windows, we need to take the device
scale factor into account. Other platforms either don't need this
(Mac) or already take it into account elsewhere (Android).

BUG=694605
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2759903002
Cr-Commit-Position: refs/heads/master@{#458120}

Former-commit-id: b1d3174a5e465867b3ae541ba545a47e11ace4b2